--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -16,7 +16,7 @@
             <a class="nav-link active" aria-current="page" href="#">Awwards</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'homepage:new_project' %}">Add Project</a>
