add home url link to navbar

--- a/homepage/templates/home/index.html
+++ b/homepage/templates/home/index.html
@@ -19,12 +19,12 @@
                 <div class="card">
                     <div class="view view-cascade overlay">
                         <img src="{{project.project_image.url}}" class="img-fluid" alt="">
-                        <a href="projects/{{proj.id}}">
+                        <a href="projects/{{project.id}}">
                             <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="">{{proj.title}}</h5>
+                        <h5 class="">{{project.title}}</h5>
                         <a href="projects/{{project.id}}">Readmore</a>
                     </div>
                 </div>
