--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -41,18 +41,22 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
    
-        <div class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <div class="nav-item dropdown" style="margin-right: 2rem;">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false;">
                 
-                 <img src="https://i.imgur.com/hczKIze.jpg" style="border-radius: 40%; width: 70px; height: 60px;" alt="">
+                 <img src="https://i.imgur.com/hczKIze.jpg" style=" width: 70px; height: 60px;" alt="">
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+            <ul  class="dropdown-menu" aria-labelledby="navbarDropdown" style="margin-right: 1.5rem;">
+                {% if user.is_authenticated %}
+              <li><a class="dropdown-item" style="margin-right: 1rem;" href="#">Profile</a></li>
+              <li><a class="dropdown-item" style="margin-right: 1rem;" href="#">Logout</a></li>
+              
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              {% else %}
+              <li style="margin-right: 0rem;"><a class="dropdown-item" style="margin-right: 3rem;" href="{% url 'login' %}">Login</a></li>
             </ul>
           </li>
+          {% endif %}
 
       </div>
       </div>
