--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -4,16 +4,16 @@
 {% block content %}
 
    
- 
-  <div class="container" style="margin-top: 8rem; margin-bottom: 8rem; ">
+
+  <div class="container" style="margin-top: 3rem; margin-bottom: 8rem; ">
     <div class="row justify-content-md-center">
       <div class="col col-lg-6">
-            <img src="https://i.gifer.com/YYZE.gif">
+            <img src="https://media0.giphy.com/media/hrAB2WcsUu5Ud4wwKE/giphy.gif?cid=790b76115291eb91d0face13c16a4b804f27d41f4c889f74&rid=giphy.gif&ct=ts">
           </div>
      
-          <div class="col col-lg-4" style="background-color: wheat;">
+          <div class="col col-lg-4" style="background-color: #c2c5aa; margin-top: 3rem;">
     
-          <h2 class="text-center">Login</h2>
+          <h2 class="text-center" style="margin-top: 3rem;">Login</h2>
           {% if form.errors %}
           <p>Your username and password didn't match. Please try again.</p>
         {% endif %}
@@ -43,8 +43,9 @@
           <input type="hidden" name="next" value="{{ next }}" />
         </form>
       
-   or create an account? <a href="{% url 'users:register' %}">Register</a>
+   Don't have an create an account? <a href="{% url 'users:register' %}">Register</a>
       </div>
     </div>
 
-    
+
+    {% endblock %}
