--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -2,12 +2,18 @@
 
 {% block content %}
 
-   
+    <div class="text-center">
+    <div id="liveAlertPlaceholder"></div>
+    <button style="margin-top: 5rem;" type="button" class="btn btn-secondary" id="liveAlertBtn">Awwards</button>
+    <br><br>
+    <h4><strong>Awwards</strong> ~ Sharpen your skills through systematic feedback</h4>
+     
+ </div>
  
-  <div class="container" style="margin-top: 8rem; margin-bottom: 8rem; ">
+  <div class="container" style="margin-top: 5rem; margin-bottom: 8rem; ">
     <div class="row justify-content-md-center">
       <div class="col col-lg-6">
-            <img src="https://i.gifer.com/YYZE.gif">
+            <img src="https://media0.giphy.com/media/hrAB2WcsUu5Ud4wwKE/giphy.gif?cid=790b76115291eb91d0face13c16a4b804f27d41f4c889f74&rid=giphy.gif&ct=ts">
           </div>
      
           <div class="col col-lg-4" style="background-color: wheat;">
@@ -30,22 +36,25 @@
         <div class="col col-lg-6">
 
  </div>
-     
-          <div class="col col-lg-3" style="margin-top: 2rem; padding: 10px;">
-            <p class="text-center">Get the app</p>
-            <!--<div class="container">-->
-              <div class="row">
-                <div class="col" style="background-color: black; margin-left: 1rem;">
-                  <i class="fab fa-apple" style="color: white; font-size: 7vh;"></i><p style="color: white;">Download on the <br><strong>AppStore</strong></p>
-                </div>
-                <div class="col col-lg-1">
+   
 
-                </div>
-                <div class="col" style="background-color: black; ">
-                  <i class="fab fa-google-play" style="color: #3bccff; font-size: 7vh;"></i><p style="color: white;">Get it on <br><strong>GooglePlay</strong></p>
-                </div>
-              </div>
-    </div>
-</div></div></div>
 
+
+<script>
+    var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+var alertTrigger = document.getElementById('liveAlertBtn')
+
+function alert(message, type) {
+  var wrapper = document.createElement('div')
+  wrapper.innerHTML = '<div class="alert alert-' + type + ' alert-dismissible" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+
+  alertPlaceholder.append(wrapper)
+}
+
+if (alertTrigger) {
+  alertTrigger.addEventListener('click', function () {
+    alert('You are one stop away from review time!Please create an account to proceed', 'success')
+  })
+}
+</script>
 {% endblock %}
