--- a/homepage/templates/home/index.html
+++ b/homepage/templates/home/index.html
@@ -1,5 +1,6 @@
 <div class="" style="font-family: 'Jost', sans-serif;">
     {%extends 'base.html'%}
+    {% load ratings %}
     {%block content%}
     <style>
         body {
