--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -36,7 +36,7 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
           </li>
         </ul>
-        <form class="d-flex">
+        <form class="d-flex" action="{% url 'homepage:search' %}">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
@@ -44,7 +44,7 @@
         <div class="nav-item dropdown" style="margin-right: 2rem;">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false;">
                 
-                 <img src="https://i.imgur.com/hczKIze.jpg" style=" width: 70px; height: 60px;" alt="">
+                 <img src="{{user.profile.photo.url }}" style=" width: 70px; height: 60px; border-radius: 40%;" alt="">
             </a>
             <ul  class="dropdown-menu" aria-labelledby="navbarDropdown" style="margin-right: 1.5rem;">
                 {% if user.is_authenticated %}
