--- a/users/templates/profile/profile.html
+++ b/users/templates/profile/profile.html
@@ -2,7 +2,7 @@
     {%include 'base.html'%}
     {%block content%}
     <div class="home-icon">
-    <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="45" height="35" style="margin-left: 3rem; margin-top: 3rem;" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+    <a href="{% url 'homepage:index' %}"><svg xmlns="http://www.w3.org/2000/svg" width="52" height="43" style="margin-left: 3rem; margin-top: 3rem;" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
       </svg></a>
     </div>
@@ -11,7 +11,7 @@
             <div class="media">
                 <div class="col-sm-4">
                     <div style="width: 150px; height:150px; overflow:hidden; border-radius:50%" class="img-wrapper">
-                        <img width="120%" height="120%" src="{{profile.photo.url }}" alt="profile">
+                        <img width="120%" height="120%" src="{{user.profile.photo.url }}" alt="profile">
                     </div>
                 </div>
                 <div class="media-body">
