--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -45,7 +45,8 @@
          
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false;">
               
-                 <p>{{user.username}}</p>
+              <img style="width: 40px; height: 40px; border-radius: 30%;" src="{{user.profile.photo.url }}" alt="profile">
+                        
             </a>
         
             
