--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -45,8 +45,7 @@
          
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false;">
               
-              <img style="width: 40px; height: 40px; border-radius: 30%;" src="{{user.profile.photo.url }}" alt="profile">
-                        
+            <p>{{user.username}}</p>     
             </a>
         
             
