--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -45,7 +45,7 @@
          
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false;">
               
-            <p>{{user.username}}</p>     
+              <img width="40" height="40" src="{{user.profile.photo.url }}" alt="profile">
             </a>
         
             
