--- a/homepage/templates/home/navbar.html
+++ b/homepage/templates/home/navbar.html
@@ -45,7 +45,9 @@
          
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false;">
               
-              <img width="40" height="40" src="{{user.profile.photo.url }}" alt="profile">
+{% if user.is_authenticated %}
+{{user.username}} {% else %}
+<p>Profile</p>{% endif %}
             </a>
         
             
