--- a/users/templates/profile/profile.html
+++ b/users/templates/profile/profile.html
@@ -12,7 +12,7 @@
                 <div class="col-sm-4">
                     <div style="width: 150px; height:150px; overflow:hidden; border-radius:50%" class="img-wrapper">
         
-                        <img width="120%" height="120%" src="{{user.profile.photo.url }}" alt="profile">
+                        <img width="120%" height="120%" src="{{profile.photo.url }}" alt="profile">
                         
                     </div>
                 </div>
