added profile conditional rendering to avoid rendering error

--- a/users/templates/profile/profile.html
+++ b/users/templates/profile/profile.html
@@ -11,9 +11,9 @@
             <div class="media">
                 <div class="col-sm-4">
                     <div style="width: 150px; height:150px; overflow:hidden; border-radius:50%" class="img-wrapper">
-        
+        {% if profile.url %}
                         <img width="120%" height="120%" src="{{user.profile.photo.url }}" alt="profile">
-                        
+                        {% endif %}
                     </div>
                 </div>
                 <div class="media-body">
